--- a/plataforma_mov_pkg/package.xml
+++ b/plataforma_mov_pkg/package.xml
@@ -58,6 +58,8 @@
   
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
