mejora nodo de ultra

--- a/ultrasonic_py/CMakeLists.txt
+++ b/ultrasonic_py/CMakeLists.txt
@@ -195,6 +195,10 @@ catkin_install_python(PROGRAMS src/ROS_sonar_sensor.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
+catkin_install_python(PROGRAMS src/ultrasonics.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
 #############
 ## Testing ##
 #############
